--- a/pom.xml
+++ b/pom.xml
@@ -74,17 +74,17 @@
             <version>5.5.1</version>
         </dependency>
 
-        <!-- 支持中文 -->
-        <dependency>
-            <groupId>com.itextpdf</groupId>
-            <artifactId>itext-asian</artifactId>
-            <version>5.2.0</version>
-        </dependency>
-        <!-- 支持css样式渲染 -->
         <dependency>
             <groupId>org.xhtmlrenderer</groupId>
             <artifactId>flying-saucer-pdf</artifactId>
-            <version>9.1.18</version>
+            <version>9.1.5</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.xhtmlrenderer/flying-saucer-pdf-itext5 -->
+        <dependency>
+            <groupId>org.xhtmlrenderer</groupId>
+            <artifactId>flying-saucer-pdf-itext5</artifactId>
+            <version>9.1.5</version>
         </dependency>
     </dependencies>
 
