--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
-            <version>5.5.9</version>
+            <version>5.7.22</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -60,20 +60,34 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>1.2.76</version>
+            <version>2.0.2.graal</version>
         </dependency>
         <dependency>
             <groupId>org.freemarker</groupId>
             <artifactId>freemarker</artifactId>
-            <version>2.3.20</version>
+            <version>2.3.31</version>
         </dependency>
+        <!--pdf-->
+        <!--   <dependency>
+               <groupId>org.xhtmlrenderer</groupId>
+               <artifactId>core-renderer</artifactId>
+               <version>R8</version>
+           </dependency>-->
+        <!--     <dependency>
+                 <groupId>commons-codec</groupId>
+                 <artifactId>commons-codec</artifactId>
+             </dependency>-->
 
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.5.1</version>
+        </dependency>
         <dependency>
             <groupId>com.itextpdf.tool</groupId>
             <artifactId>xmlworker</artifactId>
             <version>5.5.1</version>
         </dependency>
-
         <!-- 支持中文 -->
         <dependency>
             <groupId>com.itextpdf</groupId>
